Fixed scrollbars (somewhat) + vue-kanban part 1

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// vue-kanban4achiever
+@import '~vue-kanban4achiever/src/assets/kanban.scss';
+
 // Admin-lte
 @import '~admin-lte/dist/css/adminlte.css';
 
@@ -35,4 +38,31 @@ $fa-font-path:    "~@fortawesome/fontawesome-free/webfonts";
     border: none !important;
 }
 
+html{
+    height: auto !important;
+    width: 99.1% !important;
+    background-color: #f4f6f9;
+    padding-left:1% !important;
+}
+
+.content-wrapper{
+    height: inherit !important;
+}
+
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+::-webkit-scrollbar-track {
+    background-color:#ffffff !important;
+    -webkit-box-shadow: inset 0 0 1px rgb(255, 255, 255) !important;
+    border-radius: none;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: none;
+    height: 20% !important;
+    background-color:rgb(248, 156, 18);
+    -webkit-box-shadow: inset 0 0 1px rgb(248, 156, 18) !important;
+}
 
